# run-test

./: CMakeLists.txt  foo.cpp  geos-run-test-1.deb  libgeos_c.so.1  proj5152test-0.0.1-1.ky10.aarch64.rpm  vue-archives_0.1.0_arm64.deb
geos-run-test-1/: libc.so.6  libm.so.6
geos-run-test-1/DEBIAN/: control
geos-run-test-1/opt/goest/: run.py
lib/: libgeos_c.so.1.18.0
rpmpkg/: geostxxx.spec
